syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    Records in this table override SpiderRock global discount rate values in option pricing calculations.
    Note: Expiry dates that fall between years values below will be interpolated using a cubic spline on (days * rate)
*/    
message UserRateOverride {
    message PKey {
        
        string client_firm = 10;
    }

    message Curve {
        
        int32 days = 109; // calendar days to expiration (actual/365 days per year)
        float rate = 112;
        float ln_rate = 115;
        float sh_rate = 118;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    google.protobuf.Timestamp timestamp = 100;
    string text = 103; // user detail (if any)
    repeated Curve curve = 106;
}


